<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"
            />
        <item
            android:id="@+id/nav_history"
            android:title="History"
            android:icon="@drawable/ic_history"
            />
        <item
            android:id="@+id/nav_coupon_list"
            android:title="Favorite"
            android:icon="@drawable/ic_favorite"
            />
        <item
            android:id="@+id/nav_shopping_cart"
            android:title="Your Library"
            android:icon="@drawable/ic_library"
            />
    </group>
    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_my_profile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_my_profile"
                />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout"
                android:icon="@drawable/ic_logout"
                />
        </menu>
    </item>
</menu>
