<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="#0B7869"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:padding="30dp"
            android:src="@drawable/reabo" />

        <TextView
            android:id="@+id/my_profile_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/intrepid"
            android:gravity="center"
            android:text="@string/user_real_name"
            android:textColor="@color/white_cream"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/my_profile_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:hint="@string/username"
            android:background="@drawable/search_box"
            android:drawableStart="@drawable/ic_username"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textColor="@color/pink_500"
            android:textColorHint="#5A5757"
            android:elevation="4dp"
            android:focusable="false"/>
        <EditText
            android:id="@+id/my_profile_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:hint="@string/password"
            android:background="@drawable/search_box"
            android:drawableStart="@drawable/ic_password"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/pink_500"
            android:textColorHint="#5A5757"
            android:elevation="4dp"/>
        <EditText
            android:id="@+id/my_profile_birthdate"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:hint="@string/user_birthdate"
            android:background="@drawable/search_box"
            android:drawableStart="@drawable/ic_date"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/pink_500"
            android:textColorHint="#5A5757"
            android:elevation="4dp"/>
        <EditText
            android:id="@+id/my_profile_address"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/user_address"
            android:background="@drawable/search_box"
            android:drawableStart="@drawable/ic_address"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/pink_500"
            android:textColorHint="#5A5757"
            android:elevation="4dp"/>
        <EditText
            android:id="@+id/my_profile_phone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:focusable="false"
            android:hint="@string/user_phone"
            android:background="@drawable/search_box"
            android:drawableStart="@drawable/ic_phone"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/pink_500"
            android:textColorHint="#5A5757"
            android:elevation="4dp"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update_profile"
        android:background="@drawable/btn_confirm_order"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/white_cream"
        android:layout_gravity="center"
        android:fontFamily="@font/intrepid"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
</LinearLayout>