<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_product_bottom_sheet"
    android:background="@drawable/bg_home_bottom_sheet"
    android:padding="10dp">
    <TextView
        android:id="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"/>
    <TextView
        android:background="@drawable/heart"
        android:layout_marginTop="5dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/home_product_bottom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/intrepid"
        android:text="@string/home_product_bottom_title"
        android:textColor="@color/white_cream"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_product_bottom_view"/>
    <View
        android:id="@+id/home_product_bottom_view"
        android:layout_width="90dp"
        android:layout_height="3dp"
        android:background="@color/white_cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_product_bottom_title"
        app:layout_constraintBottom_toTopOf="@id/home_product_bottom_linear_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_product_bottom_linear_layout"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/home_product_bottom_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/home_product_bottom_img"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/zen" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/home_product_bottom_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/intrepid"
                android:text="@string/product_name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white_cream"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <LinearLayout
                android:id="@+id/home_product_price_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/home_product_bottom_product_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:layout_marginLeft="7dp"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:background="@drawable/dollar"/>
                <TextView
                    android:id="@+id/home_product_bottom_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/intrepid"
                    android:text="@string/product_price"
                    android:layout_marginTop="3dp"
                    android:textSize="20sp"
                    android:textColor="@color/white_cream"
                    android:padding="5dp"
                    app:layout_constraintTop_toBottomOf="@id/home_product_bottom_product_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="7dp"
                android:id="@+id/category_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/home_product_price_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:background="@drawable/optionlines"
                    android:layout_marginBottom="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"></TextView>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/intrepid"
                    android:text="Category: Novel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_add_content"
                app:layout_constraintTop_toBottomOf="@id/category_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:backgroundTint="@color/white"
                    android:textColor="@color/mallard"
                    android:id="@+id/btn_add_to_library"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thêm vào thư viện"></Button>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Description"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:fontFamily="@font/intrepid"
                app:layout_constraintTop_toBottomOf="@id/btn_add_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/txt_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="13dp"
                android:fontFamily="@font/intrepid"
                android:textColor="@color/white"
                android:text="It’s an exciting time to be a book reviewer. Once confined to print newspapers and journals, reviews now dot many corridors of the Internet — forever helping others discover their next great read. That said, every book reviewer will face a familiar panic: how can you do justice to a great book in just a thousand words?
                "/>






        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>